chandeliers-lus/tests/fail/ui/tc/builtin/float-out.stderr
error: Type mismatch between the left and right sides: expected a tuple (float, float), got a scalar float
 --> tests/fail/ui/tc/builtin/float-out.rs:5:9
  |
5 |         (x, y) = float(1);
  |         ^^^^^^^^^^^^^^^^^
  |
note: This element has type (float, float)
 --> tests/fail/ui/tc/builtin/float-out.rs:5:9
  |
5 |         (x, y) = float(1);
  |         ^^^^^
note: While this element has type float
 --> tests/fail/ui/tc/builtin/float-out.rs:5:18
  |
5 |         (x, y) = float(1);
  |                  ^^^^^^^^
